# hello-world

./: .gitignore  vimrc
ceph-scripts/: .gitignore  create_cluster.sh  create_cluster_auto_install.sh  create_cluster_local_install.sh  create_cluster_new.sh  create_cluster_new_local_install.sh  destroy_cluster.sh  destroy_cluster_auto_install.sh  destroy_cluster_local_install.sh  edit_crush.sh  install_ceph.sh  lomount.sh  map_rbd.sh  mount.sh  unmap_rbd.sh
ceph/src/os/: AdStore.cc  AdStore.h  FileStore.cc  FileStore.h  ObjectStore.cc  ObjectStore.h
cpp/: .gitignore
cpp/header/: .gitignore  Makefile.am  build.sh  common.h  test_a.cc  test_b.cc
cpp/rvalueref/: Makefile.am  build.sh  test_a.cc
cpp/sock_client/: Makefile.am  build.sh  test_a.cc
kinetic/kinetic-cpp-examples/: .gitignore  CMakeLists.txt  kinetic_cpp_client
kinetic/kinetic-cpp-examples/src/: bench_multi_client_nonblocking.cc  bench_write_nonblocking.cc  kv_bench.cc  kv_bench.h
kinetic/kinetic_cpp_client/: .gitignore  CMakeLists.txt
scripts/: distvol.sh  ecvol.sh  fs.sh  tier.sh
